style.css
*
{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

/* creating font face  */

@font-face {
    font-family: 'futura';
    src: url('./fonts/futura/futura\ medium\ bt.ttf');
}

/* header css  */

.header
{
   height: 70px;
   width: 100%;
   /* background-color: red; */
   padding: 0px 8%;
   display: flex;
   justify-content: space-between;
   
}

.logo 
{
    width: 10%;
    height: 70px;
    /* background-color: yellow; */
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: 'futura';
    font-weight: bold;
    font-size: 25px;
}

.navigation
{
    width: 30%;
    height: 70px;
    /* background-color: blue; */
}

.nav-links
{
    width: 100%;
    height: 70px;
    /* background-color: yellow; */
    display: flex;
    list-style-type: none;
    align-items: center;
    justify-content: space-between;
    font-family: 'futura';
    /* font-weight: bold; */
    font-size: 17px;
    color: #1d1d1d;
}

.nav-links > .nav-link > a 
{
    color: #1d1d1d;
    text-decoration: none;
}

.nav-links > .nav-link > i 
{
    font-size: 20px;
}



.utils 
{
    width: 12%;
    height: 70px;
    /* background-color: purple; */
}


/* banner css  */

.banner 
{
    width: 100%;
    height: 750px;
    background-color: gray;
}

.slide 
{
    width: 100%;
    height: 100%;
    background-image: url('./images/h1-slide-show-1_1_1.webp'); 
    display: flex;
    align-items: center;
    padding-left: 20%;
}

.slide-details 
{
    width: 27%;
    padding: 40px;
    /* background-color: red; */
    font-family: 'futura';
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    row-gap: 25px;
    
}

.slide-details > h1 
{
    font-size: 60px;
}

.btn 
{
    padding: 12px 30px;
    background-color: black;
    border: 1px solid black;
    color: white;
    text-transform: uppercase;
    border-radius: 30px;
}


/* featured section css  */

.featured 
{
    width: 100%;
    padding: 10px 0px;
    /* background-color: red; */
    display: flex;
    justify-content: space-between;
}

.featured-box-1 
{
    width: 33%;
    height: 570px;
    /* background-color: green; */
    position: relative;
}


.featured-box-2
{
    width: 33%;
    height: 570px;
    /* background-color: purple; */
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;

}

.featured-box-2-box-1 
{
    width: 100%;
    height: 280px;
    /* background-color: green; */
    position:relative;
}

.featured-box-2-box-2 
{
    width: 49.5%;
    height: 280px;
    /* background-color: green; */
    position: relative
}

.featured-box-2-box-3 
{
    width: 49.5%;
    height: 280px;
    /* background-color: green; */
    position: relative;
}

.featured-box-3 
{
    width: 33%;
    height: 570px;
    /* background-color: green; */
    position: relative;
}

.bg-image
{
    width: 100%;
    height: 100%;
    /* background-color: yellow; */
    overflow: hidden;
   
}

.bg-image > img
{
    width: 100%;
    transition: .2s;
}

.featured-box-1:hover  img,.featured-box-3:hover  img
{
    transform: scale(1.1);
}

.overlay
{
    width: 100%;
    height: 100%;
    /* background-color: green; */
    position: absolute;
    display: flex;
    padding: 5%;
    align-items: flex-end;
    justify-content: center;
}

.btn-white
{
    background-color: white;
    border: 1px solid white;
    color: #1d1d1d;
    box-shadow: 0 0 3px lightgray;
    z-index: 20;
}

.featured-box-1:hover img,
.featured-box-3:hover img,
.featured-box-2-box-1:hover img,
.featured-box-2-box-2:hover img,
.featured-box-2-box-3:hover img
{
    transform: scale(1.1);
}

/* products css  */

.products 
{
    width: 100%;
    padding: 30px 20%;
    /* background-color: red; */
    display: flex;
    flex-direction: column;
    row-gap: 20px;
    align-items: center;
}


.section-title
{
    font-family: 'futura';
}

.products-list
{
    width: 100%;
    padding: 20px 0px;
    /* background-color: yellow; */
    display: flex;
   justify-content: space-between;
}


.product 
{
    width: 24.5%;
    height: 420px;
    /* background-color: green; */
    display: flex;
    flex-direction: column;
    row-gap: 15px;
    font-family: futura;
    font-size: 17px;
    
}

.product:hover .main-image
{
   transform: scale(1.2);
   opacity: 0;
}

.product:hover .effect-image
{
    opacity: 1;
    transform: scale(1);
}


.product:hover .overlay-image
{
    margin-top: 0px;
}

.product-image
{
    height: 370px;
    width: 100%;
    /* background-color: blue; */
    position: relative;
    overflow: hidden;
}

.product-image  img 
{
    width: 100%;
}

.main-image
{
    width: 100%;
    height: 100%;
    /* background-color: purple; */
    position: absolute;
    transition: .2s;
    
}

.effect-image
{
    width: 100%;
    height: 100%;
    /* background-color: cyan; */
    position: absolute;
    opacity: 0;
    transform:scale(1.2);
    transition: .2s;
    
    /* display: none; */
}

.overlay-image
{
    width: 100%;
    height: 100%;
    /* background-color: brown; */
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    padding: 10%;
    margin-top: 100px;
    transition: .2s;
    /* display: none; */
}

.product-details
{
    padding: 10px;
    display: flex;
    justify-content: space-between;
    font-family: 'futura';
}


/* categories section  */

.categories
{
    width: 100%;
    padding: 30px 20%;
    /* background-color: red; */
    display: flex;
    justify-content: space-between;
}

.category
{
    width: 33%;
    /* background-color: yellow; */
}

.cat-img
{
    width: 100%;
    height: 400px;
    /* background-color: blue; */
    overflow: hidden;
}

.cat-img > img 
{
    width: 100%;
    transition: .2s;

}

.category:hover  img 
{
    transform: scale(1.3);
}


/* shop from insta section css */

.insta
{
    width: 100%;
    padding: 30px 20%;
    /* background-color: red; */
    display: flex;
    flex-direction: column;
    row-gap: 20px;
    align-items: center;
}

.posts
{
    width: 100%;
    padding: 20px 0px;
    /* background-color: yellow; */
    display: flex;
    justify-content: space-between;
    
}

.post-image
{
    width: 16%;
    height: 170px;
    position: relative;
    /* background-color: green; */
    overflow: hidden;
    display: flex;
   justify-content: flex-end;
    
}

.post-image img 
{
    width:100%;
    transition: .2s;
}

.post-image:hover img 
{
    transform: scale(1.2);
}

.post-image i 
{
    position: absolute;
    font-size: 30px;
    margin-right: 10px;
    margin-top: 10px;
    z-index: 20;
}

.footer 
{
    width: 100%;
    padding: 30px 20%;
    background-color: #f6f5fa;
    font-family: 'futura';
    display: flex;
    justify-content: space-between;
    color: #1d1d1d;
}

.footer-section
{
    /* background-color: red; */
    width: 32%;
    display: flex;
    flex-direction: column;
    row-gap: 10px;

}


.footer-list
{
    list-style-type: none;
    display: flex;
    flex-direction: column;
    row-gap: 8px;
}

.footer-list li a {
    color:black;
    text-decoration: none;
}

.border-list 
{
    margin-top: 20px;
    border-top: 1px solid lightgray;
    width: 70%;
}

.socials
{
  
    margin-top: 20px;
    display: flex;
    font-size: 20px;
    column-gap: 30px;
    
}
.socials a {
    color: black;
}

.sub 
{
    margin-top: 30px;
}

input 
{
    height: 40px;
    width: 60%;
    border-radius: 30px;
    border: 1px solid lightgray;

}

.menu 
{
    display: none;
}


@media (max-width:560px)
{
    .header
    {

        height: 50px;
        /* background-color: red; */
        flex-direction: column;
        display: block;
        overflow-y: hidden;
        transition: .3s;
        position: fixed;
        z-index: 150;
        top: 0;
        background-color: white;
        /* align-items: flex-start; */
       
    }

    .logo 
    {
        height: 50px ;
        width:100%;
        justify-content: space-between;
        align-items: center;
        /* background-color: yellow; */
    }

   

    

    .menu
    {
        display: block;
    }

    .navigation
    {
        width: 100%;
        height: auto;
        margin-top: 20px;
    }

    .utils
    {
        width: 70%;
    }

    .navigation > .nav-links{
        flex-direction: column;
        align-items: flex-start;
        row-gap: 15px;
        height: auto;
    }

    .banner{
        height: 250px;
        margin-top: 50px;
    }

    .slide{
        background-size: cover;
        padding-left: 5%;
    }

    .slide-details 
    {
        width: 80%;
    }

    .slide-details > h1 
    {
        font-size: 22px;
    }

    .btn 
    {
        font-size: 10px;
    }

    .featured
    {
        flex-direction: column;
        row-gap: 5px;
    }

    .featured-box-1{
        width: 100%;
        height: 250px;
    }

    .featured-box-1 img, .featured-box-3 img
    {
        margin-top: -100px;
    }

    .featured-box-2
    {
        width: 100%;
        height: 300px;
        row-gap: 5px;
    }

    .featured-box-2-box-1,.featured-box-2-box-2,.featured-box-2-box-3{
        height: 147.5px;
    }

    .featured-box-3{
        width: 100%;
        height: 250px;
    }

    .products 
    {
        padding: 30px 5%;
        align-items: flex-start;
        overflow-x: scroll;
    }

    .products-list{
        width: 290%;
    }

    .categories
    {
        padding: 30px 5%;
        flex-direction: column;
    }

    .category 
    {
        width: 100%;
    }

    .insta 
    {
        padding: 30px 5%;
    }
    .posts
    {
        /* flex-direction: column; */
        flex-wrap: wrap;
        row-gap: 10px;
    }

    .post-image
    {
        width: 49%;
        
    }

    .footer 
    {
        padding: 30px 5%;
        flex-direction: column;
        row-gap:20px;
    }

    .footer-section 
    {
        width: 100%;
        
    }

}

